# ksunami

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CHANGELOG_GUIDANCE.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE-MIT  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build+test.yml  ci.yml  crates.io-publish.yml  github-release.yml  hub.docker.com-manual_publish.yml  hub.docker.com-publish.yml
src/: cli.rs  generator.rs  logging.rs  main.rs  producer_manager.rs  producer_sink.rs  rdkafka.rs  records_tap.rs  transition.rs  workload.rs
