[package]
name = "ksunami"
version = "0.1.8"
edition = "2021"
authors = ["Ivan De Marino <detronizator@gmail.com>", "Kafkesc <https://github.com/kafkesc>"]
repository = "https://github.com/kafkesc/ksunami"
homepage = "https://github.com/kafkesc/ksunami"
description = "Produce constant, configurable, cyclical waves of Kafka Records"
license = "MIT OR Apache-2.0"
keywords = ["kafka", "workload", "testing", "performance", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/",
    ".gitignore",
    "images/*",
    "CHANGELOG_GUIDANCE.md"
]

[dependencies]
flo_curves = "0.7.2"
clap = { version = "4.3.21", features = ["derive", "deprecated", "env", "wrap_help"] }
log = "0.4.19"
env_logger = "0.10.0"
tokio = { version = "1.31.0", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
rand = "0.8.5"
futures = "0.3.28"
ctrlc = { version = "3.4.0", features = ["termination"] }

# TODO https://github.com/kafkesc/ksunami/issues/39
#[target.'cfg(windows)'.dependencies]
#rdkafka = { version = "0.31.0", features = ["cmake-build", "ssl-vendored", "libz-static"] }

[target.'cfg(unix)'.dependencies]
rdkafka = { version = "0.33.2", features = ["ssl-vendored", "gssapi-vendored", "libz-static"] }

[profile.release]
strip = true # Automatically strip symbols from the binary.
lto = true   # Link time optimization - see https://llvm.org/docs/LinkTimeOptimization.html.
